force-app/main/default/objects/Event__c/fields/Requested_Finance_Approval_Template__c.field-meta.xml
<CustomField>
    <fullName>Requested_Finance_Approval_Template__c</fullName>
    <description>This is controlling the requested finance approval email process</description>
    <inlineHelpText>Please select &apos;On&apos; for requested finance approval email receive</inlineHelpText>
    <label>Requested Finance Approval Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>