force-app/main/default/objects/Event__c/fields/Resources_and_Materials_Budget__c.field-meta.xml
<CustomField>
    <fullName>Resources_and_Materials_Budget__c</fullName>
    <label>Resources and Materials Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>