force-app/main/default/objects/Event__c/fields/Resources_and_Materials_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Resources_and_Materials_Expenses__c</fullName>
    <label>Resources and Materials Expenses</label>
    <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
    <summaryFilterItems>
        <field>Event_Expense__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Resources and Materials</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>