force-app/main/default/objects/Event__c/fields/Session_Capacity_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Session_Capacity_Notification_Email__c</fullName>
    <description>This is controlling the session capacity notification email process</description>
    <inlineHelpText>Please select &apos;On&apos; for session capacity notification email receive</inlineHelpText>
    <label>Session Capacity Notification Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>