force-app/main/default/objects/Event__c/fields/Session_Registration_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Session_Registration_Confirmation_Email__c</fullName>
    <description>This is controlling the session registration confirmation email process</description>
    <inlineHelpText>Please select &apos;On&apos; for session registration confirmation email receive</inlineHelpText>
    <label>Session Registration Confirmation Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>