force-app/main/default/objects/Event__c/fields/Sign_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Status__c</fullName>
    <label>Sign Off Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval_Required__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>