force-app/main/default/objects/Event__c/fields/Social_App_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Social_App_Visibility__c</fullName>
    <label>Social App Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Invisible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>