force-app/main/default/objects/Event__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;12:00:00.000&quot;)</defaultValue>
    <description>The time the event is due to start</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>