force-app/main/default/objects/Event__c/fields/Statement_Text_above_dec__c.field-meta.xml
<CustomField>
    <fullName>Statement_Text_above_dec__c</fullName>
    <inlineHelpText>This text appears above the declaration options on the web event registration page</inlineHelpText>
    <label>Statement Text (above dec)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>