force-app/main/default/objects/Event__c/fields/Statement_Text_below_dec__c.field-meta.xml
<CustomField>
    <fullName>Statement_Text_below_dec__c</fullName>
    <inlineHelpText>This text appears below the declaration options on the web event registration page</inlineHelpText>
    <label>Statement Text (below dec)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>