force-app/main/default/objects/Event__c/fields/Statement_Title__c.field-meta.xml
<CustomField>
    <fullName>Statement_Title__c</fullName>
    <inlineHelpText>The title of the consent statement used on the web registration page</inlineHelpText>
    <label>Statement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>