force-app/main/default/objects/Event__c/fields/Student_Ambassador_Budget__c.field-meta.xml
<CustomField>
    <fullName>Student_Ambassador_Budget__c</fullName>
    <label>Staff Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>