force-app/main/default/objects/Event__c/fields/Subject_Course_Area__c.field-meta.xml
<CustomField>
    <fullName>Subject_Course_Area__c</fullName>
    <description>This relates to the Subject Area related to this event</description>
    <label>Subject/Course Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Course_Options</valueSetName>
    </valueSet>
</CustomField>