force-app/main/default/objects/Event__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <description>Success message shown in event booking confirmation</description>
    <inlineHelpText>Event Booking confirmation Message</inlineHelpText>
    <label>Success Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>