force-app/main/default/objects/Event__c/fields/Targeted_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Attendance__c</fullName>
    <label>Targeted Attendance</label>
    <type>TextArea</type>
</CustomField>