force-app/main/default/objects/Event__c/fields/Tickets_Availability_Information__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Availability_Information__c</fullName>
    <description>This is controlling the ticket availability information email process</description>
    <inlineHelpText>Please select &apos;On&apos; for ticket availability information email receive</inlineHelpText>
    <label>Tickets Availability Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>