force-app/main/default/objects/Event__c/fields/Total_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets__c</fullName>
    <inlineHelpText>Roll up of total Event Product Tickets. NOTE - Total Tickets available can EITHER equal Maximum Registrations e.g. 100 student tickets + 100 parent tickets = 200 max registrations, OR exceed Max Registrations e.g. 100 student tickets OR 100 parent tickets</inlineHelpText>
    <label>Total Tickets Available</label>
    <summarizedField>Event_Product__c.Total_Quantity_Available__c</summarizedField>
    <summaryForeignKey>Event_Product__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>