force-app/main/default/objects/Event__c/fields/Travel_and_Subsistence_Staff_Budget__c.field-meta.xml
<CustomField>
    <fullName>Travel_and_Subsistence_Staff_Budget__c</fullName>
    <label>Travel and Subsistence (Staff) Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>