force-app/main/default/objects/Event__c/fields/Travel_and_Subsistence_Staff_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Travel_and_Subsistence_Staff_Expenses__c</fullName>
    <label>Travel and Subsistence (Staff) Expenses</label>
    <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
    <summaryFilterItems>
        <field>Event_Expense__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Travel and Subsistence (Staff)</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>