force-app/main/default/objects/Event__c/fields/User_Notification__c.field-meta.xml
<CustomField>
    <fullName>User_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Notification</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>