force-app/main/default/objects/Event__c/fields/Venue_Country__c.field-meta.xml
<CustomField>
    <fullName>Venue_Country__c</fullName>
    <formula>Venue__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Country</label>
    <type>Text</type>
</CustomField>