force-app/main/default/objects/Event__c/fields/Venue_State__c.field-meta.xml
<CustomField>
    <fullName>Venue_State__c</fullName>
    <formula>Venue__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue State</label>
    <type>Text</type>
</CustomField>