force-app/main/default/objects/Event__c/fields/Visible_Social_App__c.field-meta.xml
<CustomField>
    <fullName>Visible_Social_App__c</fullName>
    <label>Visible Social App</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Social_App_Visibility__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>