force-app/main/default/objects/Event__c/fields/Waiting_List_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List_Confirmation__c</fullName>
    <description>This is controlling the waiting list confirmation email process</description>
    <inlineHelpText>Please select &apos;On&apos; for waiting list confirmation email receive</inlineHelpText>
    <label>Waiting List Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>