force-app/main/default/objects/Event__c/fields/Waiting_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List_Number__c</fullName>
    <inlineHelpText>Count of Event Orders in Waiting List state.</inlineHelpText>
    <label>Waiting List Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>