force-app/main/default/objects/Event__c/fields/Web_Event_Image__c.field-meta.xml
<CustomField>
    <fullName>Web_Event_Image__c</fullName>
    <inlineHelpText>Please use the image button in the rich text controls to add an image into this field. Please use a picture which is formatted 700 x 500. This image will display on the Event Registration page to prospective attendees.</inlineHelpText>
    <label>Web Event Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>