force-app/main/default/objects/Event__c/fields/Web_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Web_Event_Location__c</fullName>
    <inlineHelpText>Please enter the display location that you wish to show people booking via the Event Registration Page e.g. Launch ED Campus, Virtual Event, Halpern House etc.</inlineHelpText>
    <label>Web Event Location(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>