force-app/main/default/objects/Event__c/fields/Web_Event_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Event_Long_Description__c</fullName>
    <inlineHelpText>The text entered here appears in the body of the Event Registration page. Please use the rich text controls provided to style the panel</inlineHelpText>
    <label>Web Event Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>