force-app/main/default/objects/Event__c/fields/Web_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Event_Name__c</fullName>
    <inlineHelpText>Please enter the display name that you wish to show people booking via the Event Registration page</inlineHelpText>
    <label>Web Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>