force-app/main/default/objects/Event__c/fields/Web_Event_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Web_Event_Pricing__c</fullName>
    <inlineHelpText>Please select an option to show to users whether this event is entirely free to attend, a paid event or has a mix of free and paid tickets</inlineHelpText>
    <label>Web Event Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Event</fullName>
            </value>
            <value>
                <fullName>Paid Event</fullName>
            </value>
            <value>
                <fullName>Free &amp; Paid Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>