force-app/main/default/objects/Event__c/fields/Web_Event_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Event_Short_Description__c</fullName>
    <inlineHelpText>The text entered here appears in the Event Registration page header</inlineHelpText>
    <label>Web Event Short Description</label>
    <type>TextArea</type>
</CustomField>