force-app/main/default/objects/Event__c/fields/Year_Group__c.field-meta.xml
<CustomField>
    <fullName>Year_Group__c</fullName>
    <description>This relates to the Year Group that this Event is targeted at</description>
    <inlineHelpText>The targeted year group for this event</inlineHelpText>
    <label>Year Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Educational_Institute_Year_Group</valueSetName>
    </valueSet>
</CustomField>