force-app/main/default/objects/Event__c/fields/Year_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Entry__c</fullName>
    <description>This is the Year of Entry that this Event is aimed at.</description>
    <label>Year of Entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>