force-app/main/default/objects/Event__c/recordTypes/Complex_Events.recordType-meta.xml
<RecordType>
    <fullName>Complex_Events</fullName>
    <active>true</active>
    <label>Complex Events</label>
</RecordType>