force-app/main/default/objects/Event__c/recordTypes/Simple_Events.recordType-meta.xml
<RecordType>
    <fullName>Simple_Events</fullName>
    <active>true</active>
    <label>Simple Events</label>
</RecordType>