force-app/main/default/objects/Event__c/validationRules/Event_Manager_Req_for_Open_Day_and_AED.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Manager_Req_for_Open_Day_and_AED</fullName>
    <active>true</active>
    <description>This Event Manager field should be populated for an Open Day / AED event (Eventbrite events)</description>
    <errorConditionFormula>AND(
    OR(
				    ISPICKVAL(Event_Type__c, &quot;Open Day&quot;),
								ISPICKVAL(Event_Type__c, &quot;AED&quot;)
				),
				ISBLANK(Event_Manager__c)
)</errorConditionFormula>
    <errorDisplayField>Event_Manager__c</errorDisplayField>
    <errorMessage>Please enter an Event Manager for this type of Event</errorMessage>
</ValidationRule>