force-app/main/default/objects/Event__c/validationRules/Mandate_Redirect_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Redirect_URL</fullName>
    <active>true</active>
    <description>User must provide Redirect URL if the Post Web Order Action is Redirect URL</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Post_Web_Order_Action__c, &apos;Redirect to URL&apos;),
  ISBLANK( Redirect_URL__c ) 
)</errorConditionFormula>
    <errorMessage>Please Provide Redirect URL if Post Web Order Action is Redirect to URL</errorMessage>
</ValidationRule>