force-app/main/default/objects/Event__c/validationRules/Validate_Approval_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Approval_Required</fullName>
    <active>true</active>
    <description>Cannot process Event Status on certain Sign Off Status</description>
    <errorConditionFormula>AND(
  TEXT(Approval_Required__c) = &apos;Approval Required&apos;,
  ISCHANGED(Event_Status__c),
  OR(TEXT(Sign_Off_Status__c) = &apos;Proposed&apos;,
    TEXT(Sign_Off_Status__c) = &apos;Declined&apos;,
    ISBLANK(TEXT(Sign_Off_Status__c))),
  AND(NOT(TEXT(Event_Status__c) = &apos;Cancelled&apos;),
    NOT(TEXT(Event_Status__c) = &apos;Planning&apos;))
)</errorConditionFormula>
    <errorMessage>If approval is required than ‘Sign Off Status’ must be ‘Approved’ in order to move to any other status except Cancelled</errorMessage>
</ValidationRule>