force-app/main/default/objects/Event__c/validationRules/Validate_Campaign_Member_Sync_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Campaign_Member_Sync_Fields</fullName>
    <active>true</active>
    <description>User should populate any one Sync Status fields related to Campaign member sync functionality</description>
    <errorConditionFormula>AND(
  ISPICKVAL(CM_ER_Auto_Sync__c , &apos;Yes&apos;),
  OR(
    ISBLANK(Campaign__c),
    AND(
      ISBLANK(Event_Reg_Cancelled_Status__c),
      ISBLANK(Event_Reg_Checked_In_Status__c),
      ISBLANK(Event_Reg_Checked_Out_Status__c),
      ISBLANK(Event_Reg_Declined_Status__c),
      ISBLANK(Event_Reg_Did_Not_Attend_Status__c),
      ISBLANK(Event_Reg_Invited_Status__c),
      ISBLANK(Event_Reg_New_Status__c),
      ISBLANK(Event_Reg_Registered_Status__c)
    )
  )
)</errorConditionFormula>
    <errorMessage>Please populate Campaign and any one Sync Status fields before enabling Campaign Member Auto Sync</errorMessage>
</ValidationRule>